Fix overflow on woo archive

--- a/assets/scss/woocommerce/_archive.scss
+++ b/assets/scss/woocommerce/_archive.scss
@@ -49,6 +49,10 @@
       margin-bottom: var(--theme-spacing);
     }
   }
+
+  .site {
+    overflow: hidden;
+  }
 }
 
 .woocommerce-categories[class] {
