--- a/woocommerce-rtl.css
+++ b/woocommerce-rtl.css
@@ -32,6 +32,9 @@
     .woocommerce .woocommerce-result-count {
       margin-bottom: var(--theme-spacing); } }
 
+.woocommerce .site {
+  overflow: hidden; }
+
 .woocommerce-categories[class] {
   line-height: 1; }
 
